Fix header spacing in FF

--- a/src/views/header/index.styl
+++ b/src/views/header/index.styl
@@ -5,13 +5,15 @@ body > header
 	margin-bottom 20px
 	position relative
 	
-	h1, h1 + small
+	h1, h1 small
 		color white
 		font-size 2em
 		text-shadow 1px 1px 1px msDarkBlue
 		
-	h1 + small
-		font-size 1em
-		position absolute
-		top 29px
-		left 330px
+	h1
+		small
+			font-size 0.5em
+			position absolute
+			top 29px
+			padding-left 8px
+			// left 330px
